--- a/index.html
+++ b/index.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Breathe Tuner - Support & Privacy</title>
+    <style>
+        body { font-family: -apple-system, sans-serif; line-height: 1.6; max-width: 600px; margin: 40px auto; padding: 0 20px; color: #333; }
+        h1 { color: #007AFF; }
+        .section { margin-bottom: 40px; padding-bottom: 20px; border-bottom: 1px solid #eee; }
+        .contact-btn { display: inline-block; background: #007AFF; color: white; padding: 10px 20px; text-decoration: none; border-radius: 8px; }
+    </style>
+</head>
+<body>
 
+    <div class="section">
+        <h1>Breathe Tuner Support</h1>
+        <p>Need help with the app or have a suggestion? We're here to help.</p>
+        <a href="mailto:marco.deb.developer@gmail.com" class="contact-btn">Email Support</a>
+    </div>
+
+    <div class="section">
+        <h1>Privacy Policy</h1>
+        <p><strong>Last Updated: January 14, 2026</strong></p>
+        <p>Breathe Tuner does not collect, store, or share any personal data. There are no accounts, no tracking, and no ads. Your breathing practice is entirely private and stays on your device.</p>
+      
+        <h3>1. Data Collection</h3>
+        <ul>
+            <li>No Personal Information collected</li>
+            <li>No Health Data shared</li>
+            <li>No Third-Party tracking</li>
+        </ul>
+
+         <h3>2. No Health Data Sharing</h3>
+        <p>
+            While the App is used for breathing exercises, 
+            it does not connect to the Apple Health app or 
+            store any physiological data (such as heart rate or 
+            oxygen levels). All exercise progress is ephemeral 
+            and stays on your device.
+        </p>
+
+         <h3>3. Audio & Background Play</h3>
+        <p>
+            The App requires permission to play audio. 
+            This is used solely to provide the piano-scale 
+            guidance and nature sounds. The App may continue to play 
+            audio in the background if you lock your device, 
+            but it does not access your microphone or any 
+            other media files.
+        </p>
+
+         <h3>4. Third-Party Services</h3>
+        <p>
+           The App does not contain any third-party advertisements or links to external websites that track your behavior.
+        </p>
+
+        <h3>5. Changes to This Policy</h3>
+        <p>
+            We may update our Privacy Policy from time to time. Any changes will be posted on this page with an updated "Last Updated" date.
+        </p>
+
+        <h3>6. Contact Us</h3>
+        <p>
+            If you have any questions about this Privacy Policy, 
+            please contact us at: marco.deb.developer@gmail.com
+        </p>
+    </div>
+
+   
+
+</body>
+</html>
